fix align-items-start issue

--- a/src/assets/styles/project-card.css
+++ b/src/assets/styles/project-card.css
@@ -1,4 +1,4 @@
-.project-card {
+/* .project-card {
     position: relative;
 
 }
@@ -62,4 +62,4 @@
     to {
         opacity: .95;
     }
-}
+} */
